--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -19,3 +19,19 @@ jobs:
       - name: build base image
         run: |
           ./build.sh -i gnuradio-base
+  build-gnuradio-minimal:
+    runs-on: ubuntu-latest
+    needs: build-base
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+      - name: install buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          version: latest
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: build base image
+        run: |
+          ./build.sh -i gnuradio
