--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -32,6 +32,6 @@ jobs:
           version: latest
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      - name: build base image
+      - name: build gnuradio image
         run: |
           ./build.sh -i gnuradio
