--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -34,4 +34,4 @@ jobs:
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build gnuradio image
         run: |
-          ./build.sh -i gnuradio
+          ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }}
