--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -20,7 +20,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build base image
         run: |
-          ./build.sh -i gnuradio-base
+          ./build.sh -i gnuradio-base -r ${{ github.event.before }}..${{ github.sha }}
   build-gnuradio-minimal:
     runs-on: ubuntu-latest
     needs: build-base
