--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -21,7 +21,7 @@ jobs:
       - name: build base image
         run: |
           ./build.sh -i gnuradio-base -r ${{ github.event.before }}..${{ github.sha }}
-  build-gnuradio-minimal:
+  build-gnuradio-amd64:
     runs-on: ubuntu-latest
     needs: build-base
     steps:
@@ -38,4 +38,40 @@ jobs:
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build gnuradio image
         run: |
-          ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }}
+          ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -p linux/amd64
+  build-gnuradio-arm:
+    runs-on: ubuntu-latest
+    needs: build-base
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: install buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          version: latest
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: build gnuradio image
+        run: |
+          ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -p linux/arm
+  build-gnuradio-arm64:
+    runs-on: ubuntu-latest
+    needs: build-base
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: install buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          version: latest
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: build gnuradio image
+        run: |
+          ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -p linux/arm64
