--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -83,13 +83,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: install buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
-        with:
-          version: latest
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build gnuradio manifest
         run: |
-          ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -f -m -p linux/amd64,linux/arm,linux/arm64
+          DOCKER_CLI_EXPERIMENTAL=enabled ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -f -m -p linux/amd64,linux/arm,linux/arm64
