--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -87,4 +87,4 @@ jobs:
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build gnuradio manifest
         run: |
-          DOCKER_CLI_EXPERIMENTAL=enabled ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -f -m -p linux/amd64,linux/arm,linux/arm64
+          DOCKER_CLI_EXPERIMENTAL=enabled ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -m -p linux/amd64,linux/arm,linux/arm64
