--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: master
 jobs:
-  build-base:
+  build-gnuradio-base:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
@@ -23,7 +23,7 @@ jobs:
           ./build.sh -i gnuradio-base -r ${{ github.event.before }}..${{ github.sha }}
   build-gnuradio-amd64:
     runs-on: ubuntu-latest
-    needs: build-base
+    needs: build-gnuradio-base
     steps:
       - name: checkout code
         uses: actions/checkout@v2
@@ -41,7 +41,7 @@ jobs:
           ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -p linux/amd64
   build-gnuradio-arm:
     runs-on: ubuntu-latest
-    needs: build-base
+    needs: build-gnuradio-base
     steps:
       - name: checkout code
         uses: actions/checkout@v2
@@ -59,7 +59,7 @@ jobs:
           ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -p linux/arm
   build-gnuradio-arm64:
     runs-on: ubuntu-latest
-    needs: build-base
+    needs: build-gnuradio-base
     steps:
       - name: checkout code
         uses: actions/checkout@v2
@@ -88,3 +88,20 @@ jobs:
       - name: build gnuradio manifest
         run: |
           DOCKER_CLI_EXPERIMENTAL=enabled ./build.sh -i gnuradio -r ${{ github.event.before }}..${{ github.sha }} -m -p linux/amd64,linux/arm,linux/arm64
+  build-rtlsdr-base:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: install buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          version: latest
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: build rtlsdr base image
+        run: |
+          ./build.sh -i rtlsdr-base -r ${{ github.event.before }}..${{ github.sha }}
